--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <script nomodule
     src="https://unpkg.com/@google/model-viewer@0.6.0/dist/model-viewer-legacy.js">
     </script>
-    
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="https://cdn.usefathom.com/script.js" data-site="AILGLWDM" defer></script>
+    <!-- / Fathom -->
 
 </head>
 <body>
