--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a href="">
             LAST
         </a>
+        <a href="https://github.com/vetlesen/pullrequest" target="_blank">
+            MANIFESTO
+        </a>
         <a href="">
             NEXT
         </a>
